--- a/index.html
+++ b/index.html
@@ -81,9 +81,80 @@
           <button id="disableButton" class="default disable">Click</button>
         </div>
       </div>
-        
+      <!--Buttons com icones-->
+      <div class="defaults"> 
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton iconStart/&gt</p>
+          <div class="div__i__button">
+            <i class="fa-solid fa-cart-shopping"></i>
+          <button class="default shop">default</button>
+          </div>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton iconEnd  <span class="span__change"></span>/&gt</p>
+          <div class="div__i__button"> 
+            <button class="default shop ">default</button>
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </div>
+      </div>
+      <!--Buttons com tamanhos diferents-->
+      <div class="defaults flex"> 
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton small /&gt</p>
+          <button class="default small hover">default</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton defaut <span class="span__change">:onclick</span>/&gt</p>
+          <button  class="default hover">defaut</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton large /&gt</p>
+          <button class="default large hover">default</button>
+        </div>
+      </div>
+      <!--Buttons com cores diferentes-->
+      <div class="defaults flex"> 
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton defaut /&gt</p>
+          <button class="default ">default</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton blue <span class="span__change"></span>/&gt</p>
+          <button  class="default blue ">default</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton dark/&gt</p>
+          <button class="default dark ">secondary</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton red /&gt</p>
+          <button class="default red ">danger</button>
+        </div>
+      </div>
+      <!--Buttons com cores diferentes e hover-->
+      <div class="defaults flex"> 
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton defaut <span class="span__change">:hover</span>/&gt</p>
+          <button class="default hover">default</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton blue <span class="span__change">:hover</span>/&gt</p>
+          <button  class="default blue hover">default</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton dark<span class="span__change">:hover</span>/&gt</p>
+          <button class="default dark hover">secondary</button>
+        </div>
+        <div class="div__buttons">
+          <p class="p__buttons">&ltbutton red <span class="span__change">:hover</span>/&gt</p>
+          <button class="default red hover ">danger</button>
+        </div>
+      </div>
+      <p class="p__footer">Developed By <a href="https://www.linkedin.com/in/alecson-ernandes-100b3416a/" class="a__footer" target="_blank">Alecson</a></p>
     </section>
   </main>
+  
 
     <script defer src="./js/script.js"></script>
 </body>
