--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <button class="default small hover">default</button>
         </div>
         <div class="div__buttons">
-          <p class="p__buttons">&ltbutton defaut <span class="span__change">:onclick</span>/&gt</p>
+          <p class="p__buttons">&ltbutton defaut <span class="span__change"></span>/&gt</p>
           <button  class="default hover">defaut</button>
         </div>
         <div class="div__buttons">
